--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@prisma/client": "^5.21.1",
     "@sequelize/postgres": "^7.0.0-alpha.43",
+    "accesscontrol": "^2.2.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui": "^5.17.14",
